k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fierce
spec:
  selector:
    app: fierce
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000
  type: LoadBalancer
