k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fierce
  namespace: fierce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: fierce.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fierce-frontend
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: fierce-backend
            port:
              number: 80
